--- a/src/assets/css/mediascreen.css
+++ b/src/assets/css/mediascreen.css
@@ -1,5 +1,5 @@
 @media screen and (min-width :771px){
-    .responsive-center{
+    .responsive-between{
       display: flex !important;
       justify-content: end !important;
     }
@@ -9,13 +9,48 @@
     .responsive-table-margin-end{
       margin-right: 20px;
     }
+    .responsive-table-margin-x-20px{
+        margin-right: 20px;
+        margin-left: 20px;
+      }
+    
+    .responsive-padding-none{
+        padding:none !important;
+    }
+    .responsive-end{
+        display: flex !important;
+        justify-content: end !important;
+      }
+    .r-m-5px{
+        margin: 5px;
+    }
   }
   @media screen and (max-width :770px){
-    .responsive-center{
+    .responsive-between{
       display: flex !important;
       justify-content: space-between !important;
     }
     .responsive-center-mb-20px{
       margin-bottom: 20px;
     }
+    .responsive-center-trb-10px{
+        margin-top: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        margin-left: none !important;
+      }
+        
+   
+    .responsive-columns{
+        display: flex !important;
+        flex-direction: column !important;
+    }
+    .responsive-tab-content{
+        max-width: max-content;
+    }
+
+    .responsive-center{
+        display: flex !important;
+        justify-content: center !important;
+      }
   }
