--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -58,7 +58,8 @@
   
   /* Track */
   .scroll::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: var(--vt-c-light-gray);
+    margin-top: 1.8rem;
   }
    
   /* Handle */
