Table pagination Responsiveness fix

--- a/src/assets/css/mediascreen.css
+++ b/src/assets/css/mediascreen.css
@@ -25,6 +25,11 @@
         margin: 5px;
     }
   }
+  @media screen and (max-width :500px){
+    .r-display-none{
+        display: none;
+    }
+  }
   @media screen and (max-width :770px){
     .responsive-between{
       display: flex !important;
