--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -72,6 +72,30 @@
   .scroll::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+  /* domain manager scroll  */
+  .scroll-domain-manager::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+    border-radius: 10px;
+  }
+  
+  /* Track */
+  .scroll-domain-manager::-webkit-scrollbar-track {
+    background: var(--vt-c-light-gray);
+    margin-top: 2.4rem;
+  }
+   
+  /* Handle */
+  .scroll-domain-manager::-webkit-scrollbar-thumb {
+    background:  #C6C7F9;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  .scroll-domain-manager::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  /* domain manager scroll  */
 
   textarea {
     width: 650px;
