--- a/src/assets/css/SuspendLicense.css
+++ b/src/assets/css/SuspendLicense.css
@@ -1,4 +1,4 @@
-.suspende-cont-modal{
+.suspend-cont-modal{
     width: 481px !important;
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
     background: var(--vt-c-white);  
@@ -8,4 +8,8 @@
     padding-left: 25px;
     padding-right: 25px;
 }
-
+.size-textarea-suspend-license{
+    height:100px !important;
+    width: 100%;
+    
+  } 
