--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -89,3 +89,27 @@
   border-right: none;
   border-bottom: 2px solid;
 }
+
+/* scroll for Add account  */
+.scroll-addacount::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+}
+
+/* Track */
+.scroll-addacount::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+ 
+/* Handle */
+.scroll-addacount::-webkit-scrollbar-thumb {
+  background:  #C6C7F9;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.scroll-addacount::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+/* scroll for Add account  */
