Pagination and buttons updates

--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -95,7 +95,17 @@
 /* size  */
 
 
-
+.modal::backdrop {
+  background:black !important;
+}
+.modal-absolute-center{
+  height:fit-content !important;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
 /* .responsive-center{
   display: flex !important;
     justify-content:end !important;
