--- a/src/assets/css/mediascreen.css
+++ b/src/assets/css/mediascreen.css
@@ -3,12 +3,7 @@
       display: flex !important;
       justify-content: end !important;
     }
-    .responsive-table-margin-start{
-      margin-left: 20px;
-    }
-    .responsive-table-margin-end{
-      margin-right: 20px;
-    }
+    
     .responsive-table-margin-x-20px{
         margin-right: 20px;
         margin-left: 20px;
@@ -30,6 +25,20 @@
         display: none;
     }
   }
+  @media screen and (max-width :520px){
+    .r-text-sm{
+        font-size:calc(var(--c-font-size-16px) - 20%) !important;
+    }
+  }
+
+  @media screen and (min-width :575px){
+    .responsive-table-margin-start{
+        margin-left: 20px;
+      }
+      .responsive-table-margin-end{
+        margin-right: 20px;
+      }
+  }
   @media screen and (max-width :760px){
     .responsive-between{
       display: flex !important;
@@ -48,12 +57,6 @@
         margin-right: 20px;
         margin-left: 20px;
       }
-      .responsive-table-margin-end-10px{
-        margin-right: 10px;
-
-      }
-        
-   
     .responsive-columns{
         display: flex !important;
         flex-direction: column !important;
