--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -13,7 +13,6 @@
 }
 
 .client-container{
-  max-height: 745px;
   max-width: 895px;
   box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
   border-radius: 8px;
@@ -24,7 +23,6 @@
 
 .add-cont3{
     width: 780px;
-    height: 745px;
     background: #FFFFFF;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
@@ -48,6 +46,10 @@
     overflow-x: scroll;
 }
 
+.scroll2{
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
 
 /* width */
 .scroll::-webkit-scrollbar {
@@ -120,17 +122,22 @@
   height: 10px;
   width: 10px;
   border-radius: 10px;
+  
 }
 
 /* Track */
 .scroll-addacount::-webkit-scrollbar-track {
   background: #f1f1f1;
+  margin-block: 5rem;
 }
  
 /* Handle */
 .scroll-addacount::-webkit-scrollbar-thumb {
   background:  #C6C7F9;
   border-radius: 10px;
+  height: 10px !important;
+
+
 }
 
 /* Handle on hover */
