--- a/src/assets/css/marginsnpaddings.css
+++ b/src/assets/css/marginsnpaddings.css
@@ -326,3 +326,11 @@ padding-bottom: 0px !important;
 .vertical-alignment-center{
   vertical-align: middle;
 }
+
+.gap-20px{
+  border: 1px solid black;
+  background-color: mintcream;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 20px;
+}
