--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,6 +21,7 @@
 @import './css/TransferLicenseModal.css';
 @import './css/SuspendLicense.css';
 @import './css/mediascreen.css';
+@import './css/ViewLicense.css';
 @font-face {
   font-family: 'Poppins-regular';
   src: url(../assets/font_styles/Poppins-Regular.ttf) format(truetype); 
