--- a/src/assets/css/transform.css
+++ b/src/assets/css/transform.css
@@ -113,9 +113,7 @@
   padding: 29px 25px;
   }
 
-  .size-container-addlicensedevelop{
-    max-width: 1453px !important;
-  }
+  
   /* containers  */
  
 /* custom-sizes  */
@@ -191,3 +189,7 @@
     height: 30%;
   }
   /* height  */
+
+  .r-pos-addlicense-buttons{
+    left: 1235px;
+  }
