--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -145,3 +145,10 @@
   background: #555; 
 }
 /* scroll for Add account  */
+
+
+.add-botton-toggle {
+  position:absolute;
+  right: 120px; 
+  cursor: pointer;
+}
