--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -11,9 +11,22 @@
   display: flex;
   align-items: center;  
 }
+@media screen and(max-width:600px){
+  .size-container-action{
+    width: 200px !important ;
+  }
 
-.client-container{
+}
+.size-container-action{
+  height: 745px;
+  width: 497px;
+}
+.size-container-clientdetails-tables{
+  height: 745px;
   max-width: 895px;
+}
+.client-container{
+  width: 895px;
   box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
   border-radius: 8px;
   background: var(--vt-c-white);  
