--- a/src/assets/css/ViewLicense.css
+++ b/src/assets/css/ViewLicense.css
@@ -5,10 +5,10 @@
 }
 
 .view-license-tab1{
-    width: 1412px;
-    height: 187px;
     background: #FFFFFF;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
     margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
