--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -63,7 +63,9 @@
   /* colors */
 
   /* sizes  */
+  --c-size-1px:0.063rem;
   --c-size-2px:0.125rem;
+  --c-size-3px:0.188rem;
   --c-size-4px:0.25rem;
   --c-size-5px:0.313rem;
   --c-size-6px:0.375rem;
@@ -77,6 +79,7 @@
   --c-size-15px:0.938rem;
   --c-size-16px:1rem;
   --c-size-17px:1.063rem;
+  --c-size-18px:1.125rem;
   --c-size-20px:1.25rem;
   --c-size-22px:1.375rem;
   --c-size-24px:1.5rem;
