--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -14,12 +14,13 @@
 @media screen and(max-width:600px){
   .size-container-action{
     width: 200px !important ;
+    
   }
 
 }
 .size-container-action{
-  height: 745px;
-  width: 497px;
+  max-width: 497px;
+
 }
 .size-container-clientdetails-tables{
   height: 745px;
@@ -27,6 +28,7 @@
 }
 .client-container{
   width: 895px;
+  min-height: max-content;
   box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
   border-radius: 8px;
   background: var(--vt-c-white);  
@@ -44,7 +46,6 @@
 /* 497px  */
 .action-cont4{
     max-width:497px;
-    min-height: max-content;
     background: #F3F6FF;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
