--- a/src/assets/css/AddAccount.css
+++ b/src/assets/css/AddAccount.css
@@ -1,3 +1,40 @@
+.box-size{
+    width: 457px;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
+    border-radius: 4px;
+
+}
+.size-container-addaccount{
+    max-width: 1420px !important;
+  }
+  
+  @media screen and (max-width:1500px){
+    .c-grid{
+      --column-count:2 !important;
+    }
+    .size-container-addaccount{
+      max-width: 700px !important;
+    }
+  }
+  
+  @media screen and (max-width:1000px){
+    .c-grid{
+      --column-count:1 !important;
+    }
+    .size-container-addaccount{
+      max-width: 300px !important;
+    }
+  }
+  @media screen and (max-width:521px){
+    .c-grid{
+      --column-count:1 !important;
+    }
+    .size-container-addaccount{
+      max-width: px !important;
+    }
+  }
 .add-cont{
     height: 1247px;
     padding: 20px
