--- a/src/assets/css/ViewLicense.css
+++ b/src/assets/css/ViewLicense.css
@@ -8,7 +8,29 @@
     background: #FFFFFF;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-    margin-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding:20px;
+}
+
+.font-style-roboto-view{
+    font-family: 'Roboto-regular', sans-serif;  
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+    color: var(--vt-c-valencia);                
+}
+
+.size-textarea-view{
+    min-height:100px !important;
+    max-width: 1372px;
+    background: #F4F4F4    ;
+    box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
+    border-radius: 4px; 
+    font-family: 'Roboto-regular', sans-serif;  
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
 }
