--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -55,8 +55,8 @@ margin-left: none;
 height:650px;
 }
 .scroll{
-  overflow-y: scroll;
-  overflow-x: scroll;
+  /* overflow-y: scroll; */
+  /* overflow-x: scroll; */
 }
 
 .scroll2{
