--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -55,13 +55,12 @@ margin-left: none;
 height:650px;
 }
 .scroll{
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   /* overflow-x: scroll; */
 }
 
 .scroll2{
 overflow-y: scroll;
-overflow-x: scroll;
 }
 
 /* width */
