--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -211,7 +211,7 @@
     border-radius: 0px !important;
   }
   .border-round16px{
-    border-radius: 16px;
+    border-radius: 16px !important;
   }
   /* border Colors */
 
