Update for Firstpass

--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -5,6 +5,9 @@
     border-radius: 16px;
 }
 
+.add-client-details{
+    
+}
 .icon-x-license{
     border-radius: 50% !important;
     background-color: var(--vt-c-indigo);
