--- a/src/assets/css/AddAccount.css
+++ b/src/assets/css/AddAccount.css
@@ -137,3 +137,10 @@
     transform: translateY(-180%);
     cursor: pointer;
 }
+
+.add-ticket-toggle{
+  
+  right: px; 
+  transform: translateY(3%);
+  cursor: pointer;
+}
